@@ -46,6 +46,10 @@
     <cvs-directory>gnome-applets/charpick/help/</cvs-directory>
   </module>
 
+  <module id="applets-command-line">
+    <cvs-directory>gnome-applets/mini-commander/help/</cvs-directory>
+  </module>
+
   <module id="applets-cpufreq">
     <cvs-directory>gnome-applets/cpufreq/help/</cvs-directory>
   </module>
@@ -70,10 +74,6 @@
     <cvs-directory>gnome-applets/gweather/docs</cvs-directory>
   </module>
 
-  <module id="applets-command-line">
-    <cvs-directory>gnome-applets/mini-commander/help/</cvs-directory>
-  </module>
-
   <module id="applets-mixer">
     <cvs-directory>gnome-applets/mixer/docs</cvs-directory>
   </module>
@@ -96,7 +96,6 @@
 
   <module id="bug-buddy">
     <cvs-directory>bug-buddy/docs</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="dasher">
@@ -111,72 +110,67 @@
 
   <module id="eog">
     <cvs-directory>eog/help</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="epiphany">
     <cvs-directory>epiphany/help</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
+  </module>
+
+  <module id="epiphany-extensions">
+    <cvs-directory>epiphany-extensions/help</cvs-directory>
   </module>
 
   <module id="evince">
     <cvs-directory>evince/help</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="evolution">
     <cvs-directory>evolution/help</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="fast-user-switch-applet">
     <cvs-directory>fast-user-switch-applet/help</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="file-roller">
     <cvs-directory>file-roller/help</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="gcalctool">
     <cvs-directory>gcalctool/help</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="gconf-editor">
     <cvs-directory>gconf-editor/docs</cvs-directory>
   </module>
 
-  <module id="gfloppy">
-    <cvs-directory>gfloppy/doc</cvs-directory>
-  </module>
-
   <module id="gdm2">
     <cvs-directory>gdm2/docs</cvs-directory>
-    <!--<cvs-branch>gnome-2-12</cvs-branch>-->
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="gedit">
     <cvs-directory>gedit/help</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
+  </module>
+
+  <module id="gfloppy">
+    <cvs-directory>gfloppy/doc</cvs-directory>
+  </module>
+
+  <module id="glom">
+    <cvs-directory>glom/docs/user-guide</cvs-directory>
   </module>
 
   <module id="gnome-accessibility-guide">
     <cvs-directory>gnome-user-docs/gnome2-accessibility-guide</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
 
   <module id="gnome-control-center">
     <cvs-directory>gnome-control-center/help</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="gnome-keyring-manager">
     <cvs-directory>gnome-keyring-manager/docs</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="gnome-netstatus">
@@ -200,7 +194,6 @@
 
   <module id="gnome-system-admin-guide">
     <cvs-directory>gnome-user-docs/gnome2-system-admin-guide</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="gnome-system-tools-boot">
@@ -235,32 +228,34 @@
 
   <module id="gnome-terminal">
     <cvs-directory>gnome-terminal/help</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="gnome-user-guide">
     <cvs-directory>gnome-user-docs/gnome2-user-guide</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="gnome-utils-dictionary">
     <cvs-directory>gnome-utils/gnome-dictionary/help</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="gnome-utils-gfloppy">
     <cvs-directory>gnome-utils/gfloppy/doc</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="gnome-utils-gsearchtool">
     <cvs-directory>gnome-utils/gsearchtool/help</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="gnome-utils-logview">
     <cvs-directory>gnome-utils/logview/help</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
+  </module>
+
+  <module id="gnomeradio">
+    <cvs-directory>gnomeradio/help</cvs-directory>
+  </module>
+
+  <module id="goobox">
+    <cvs-directory>goobox/help</cvs-directory>
   </module>
 
   <module id="gossip">
@@ -275,24 +270,24 @@
     <cvs-directory>gucharmap/help</cvs-directory>
   </module>
 
+  <module id="monkey-bubble">
+    <cvs-directory>monkey-bubble/help</cvs-directory>
+  </module>
+
   <module id="panel-clock-applet">
     <cvs-directory>gnome-panel/help/clock</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="panel-fish-applet">
     <cvs-directory>gnome-panel/help/fish</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="panel-windowlist-applet">
     <cvs-directory>gnome-panel/help/window-list</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="panel-workspace-switcher-applet">
     <cvs-directory>gnome-panel/help/workspace-switcher</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
   <module id="rhythmbox">
@@ -313,7 +308,6 @@
 
   <module id="zenity">
     <cvs-directory>zenity/help</cvs-directory>
-    <cvs-branch>HEAD</cvs-branch>
   </module>
 
 </gnomedocs>
