@@ -1,3 +1,8 @@
+2006-12-02  Christophe Bliard  <christophe.bliard@trux.info>
+
+	* modules.xml: Add epiphany-extensions, glom, gnomeradio,
+	goobox and monkey-bubble + cleanings.
+
 2006-11-22  Francisco Javier F. Serrador  <serrador@openshine.com>
 
 	* modules.xml: Add evolution.
